config (project) : use java 14 to enable preview feature for previous versions
The preview feature is only accessible via the last version